--- a/src/public/css/profileProject.css
+++ b/src/public/css/profileProject.css
@@ -85,9 +85,6 @@ a{
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid #707070;
-    /* background-color: #D0D0D0; */
-    /* background-image: linear-gradient(145deg, #505050, #303030); */
-    /* background: linear-gradient(142deg, rgba(115,115,115,1) 17%, rgba(56,56,56,1) 100%); */
     background: linear-gradient(310deg, rgb(181 181 181) 17%, rgb(146 146 146) 100%);
 }
 
@@ -147,6 +144,16 @@ a{
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     max-width: 50%;
     transition: 0.2s;
+}
+
+.image-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.project-image{
+    margin: 5px 10%;
 }
 
 .project-description{
