--- a/src/views/profileProjects.ejs
+++ b/src/views/profileProjects.ejs
@@ -36,15 +36,17 @@
         <% if(context.data.length > 0){ %>
         <% for(let i=0; i < context.data.length; i++){ %>
         <div class="loaded-project">
-            <% for(let j=0; j < data[i].image_data.length; j++){ %>
-            <div class="project-image">
-                <img src="data: <%= data[i].image_mimetype[j] %>;base64<%= data[i].image_data[j].toString('base64') %>" alt="project-image">
-            </div>
+            <div class="image-container">
+            <% for(const img_data of context.data[i].image_data){ %>
+                <div class="project-image">
+                    <img class="project-image-loaded" src="data:<%= context.data[i].image_mimetype[i] %>;base64,<%= img_data.toString('base64') %>" alt="project-image">
+                </div>
             <% } %>
-            <div class="project-description">
-                <p class="project-desc"> <%= data[i].project_description %></p>
             </div>
-        </div>
+            <div class="project-description">
+                    <p class="project-desc"> <%= context.data[i].project_description %></p>
+                </div>
+            </div>
         <% } %>
         <% } %>
     </div>
@@ -56,7 +58,7 @@
             </div>
             <div class="project-image">
                 <label for="image-input" class="img-input-label" >Escolher imagens do novo projeto</label>
-                <input type="file" name="imageInput" class="image-input" id="image-input">
+                <input type="file" multiple name="imageInput" class="image-input" id="image-input">
             </div>
 
             <div class="submit-container">
