--- a/src/views/profileProjects.ejs
+++ b/src/views/profileProjects.ejs
@@ -37,9 +37,9 @@
         <% for(let i=0; i < context.data.length; i++){ %>
         <div class="loaded-project">
             <div class="image-container">
-            <% for(const img_data of context.data[i].image_data){ %>
+            <% for(let j=0; j < context.data[i].image_data.length; j++){ %>
                 <div class="project-image">
-                    <img class="project-image-loaded" src="data:<%= context.data[i].image_mimetype[i] %>;base64,<%= img_data.toString('base64') %>" alt="project-image">
+                    <img class="project-image-loaded" src="data:<%= context.data[i].image_mimetype[j] %>;base64,<%= context.data[i].image_data[j].toString('base64') %>" alt="project-image">
                 </div>
             <% } %>
             </div>
